--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.3",
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "express-flash": "^0.0.2",
     "express-session": "^1.18.1",
+    "md5": "^2.3.0",
+    "method-override": "^3.0.0",
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.2",
     "multer": "^1.4.5-lts.1",
+    "pug": "^3.0.3",
     "socket.io": "^4.8.0"
   },
   "devDependencies": {
