--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "bootstrap": "^5.3.3",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
     "mongodb": "^6.10.0",
-    "mongoose": "^8.7.2",
+    "mongoose": "^8.8.0",
     "multer": "^1.4.5-lts.1",
-    "socket.io": "^4.8.0"
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
