--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.18.1",
     "md5": "^2.3.0",
     "method-override": "^3.0.0",
+    "moment": "^2.30.1",
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.2",
     "multer": "^1.4.5-lts.1",
